Progress on parsing instance patterns in instanceof